--- a/primeiro-repositorio/funcoes.html
+++ b/primeiro-repositorio/funcoes.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="exerciciopesoideal.js"></script>
+    <script src="funcoes.js"></script>
 </body>
 </html>
